FIX: a2.md: Slight modification to one of the design prompts

--- a/a2.md
+++ b/a2.md
@@ -12,8 +12,8 @@ You will deliver a written report.
 
 For each of the following three design problems, identify one method from each of the four IDEO categories (look, listen, try, and learn) that you could conduct to develop an understanding of the design problem and the users in it. That is, for each design problem, choose a total of four methods -- one from each of the IDEO categories. Ideally, the four methods you choose complement one another. Justify your choice of each method for the problem, and how the four methods you choose for that design problem could help triangulate a researcher's understanding.
 
-* How can we design technology to allow people who are house-bound to explore the outdoors?
-* How can we design technology to support the provision of remote assistance to airplane mechanics?
+* How should we design technology to allow people who are house-bound to explore the outdoors?
+* How should we design technology so that airplane mechanics can get a remote consult (e.g. from an expert)?
 * How can we design technology to provide ambient awareness of in-home energy usage?
 
 Your report should be roughly 3-4 pages long. Make sure to use headers to delineate the different sections of the report.
