FIX: Made the grading sheets link properly to hcitang.org

--- a/a1.md
+++ b/a1.md
@@ -22,7 +22,7 @@ Your report should be roughly 3-4 pages long. Make sure to use headers to deline
 
 ## Grading Rubric
 
-The grading rubric for this assignment is here: [481-A1-grading-rubric.pdf](files/481-A1-grading-rubric.pdf)
+The grading rubric for this assignment is here: [481-A1-grading-rubric.pdf](http://www.hcitang.org/uploads/Teaching/files/481-A1-grading-rubric.pdf)
 
 Print and staple this to the front of your assignment.
 
