--- a/a2.md
+++ b/a2.md
@@ -21,7 +21,7 @@ Your report should be roughly 3-4 pages long. Make sure to use headers to deline
 This report is to be single-spaced, double-sided. Use 12-pt Times font with 1" margin on all sides.
 
 ## Grading Rubric
-The grading rubric for this assignment is here: [481-A2-grading-rubric.pdf](files/481-A2-grading-rubric.pdf)
+The grading rubric for this assignment is here: [481-A2-grading-rubric.pdf](http://www.hcitang.org/uploads/Teaching/files/481-A2-grading-rubric.pdf)
 
 Print and staple this to the front of your assignment.
 
