FEATURE: index.md - pointers to a0 & p0
Made pointers to a0 & p0 work from index.md
Fixed the pointer on p0 to the team contract handout

--- a/p0.md
+++ b/p0.md
@@ -27,4 +27,4 @@ This component is graded on completion. If it is unsatisfactory, it will be retu
 * 9/30: Submit final team contract
 
 ## Resources
-[Team Contract Handout](files/TeamContract-Handout.docx)
+[Team Contract Handout](http://www.hcitang.org/uploads/Teaching/TeamContract-Handout.docx)
