FIX: links to offsite materials in a1, a2, p2

--- a/p2.md
+++ b/p2.md
@@ -30,4 +30,4 @@ Time permitting, I will make time available for you to do this session during tu
 * Look on the [grading sheet page](project-grading-sheets.md) for the printable grading sheet.
 
 ## Resources
-* [Task Centred Design Walkthrough Template](files/481-tcsd-walkthrough-template.docx)
+* [Task Centred Design Walkthrough Template](http://hcitang.org/uploads/Teaching/481-tcsd-walkthrough-template.docx)
