FIX: index,p3,project: Typos, due date for P0 individual

--- a/p3.md
+++ b/p3.md
@@ -4,7 +4,7 @@ In P2, you developed a wide space of ideas, and focused on developing a number o
 
 At some point, your customers are going to want to see a more tangible prototype. These are ways that you can develop prototypes to not only understand what the resulting system may look like, but also what it feels like to interact with. Using these prototypes, you could easily evaluate your interface with users, understanding what aspects of the interaction works well, and what doesn't. These "quick and dirty" prototyping methods allow you to get that idea without expending the major effort that is required to develop a prototype using code. You were able to get a taste of this by building your video prototype.
 
-For this project component, you will actually develop a prototype of your system in C#. You should develop a deep vertical prototype that addresses all the "must have" tasks you identified in P1, and refined in P2. Your prototype should follow the design ideas you identified and storyboarded in P2, but only to the extent that it makes sense. If you discover that an alternate idea/design works better, feel free to implement this; however, you will need to be clear about this modification, and justify it for both P3 and P4.
+For this project component, you will actually develop a prototype of your system in Java. You should develop a deep vertical prototype that addresses all the "must have" tasks you identified in P1, and refined in P2. Your prototype should follow the design ideas you identified and storyboarded in P2, but only to the extent that it makes sense. If you discover that an alternate idea/design works better, feel free to implement this; however, you will need to be clear about this modification, and justify it for both P3 and P4.
 
 In practice, you could now demo the system and conduct usability or feedback sessions with potential users. This is often time consuming and expensive, so you may need a method to evaluate the usability of your interface that gets you results without having to involve users. One of these methods is to conduct a Heuristic Evaluation. Your job is to conduct a heuristic evaluation, and report on the main findings.
 
