--- a/p3.md
+++ b/p3.md
@@ -9,7 +9,7 @@ For this project component, you will actually develop a prototype of your system
 In practice, you could now demo the system and conduct usability or feedback sessions with potential users. This is often time consuming and expensive, so you may need a method to evaluate the usability of your interface that gets you results without having to involve users. One of these methods is to conduct a Heuristic Evaluation. Your job is to conduct a heuristic evaluation, and report on the main findings.
 
 ## Major Activities
-* **Build a vertical prototype.** Using C#, build a vertical prototype that addresses all of the "must have" task requirements you identified in P1. This prototype should be functional: not only in that the interface appears correct, but that the core functionality actually works the way that it is intended. The goal, remember, is to allow someone to understand how it would feel to interact with the system. 
+* **Build a vertical prototype.** Using Java, build a vertical prototype that addresses all of the "must have" task requirements you identified in P1. This prototype should be functional: not only in that the interface appears correct, but that the core functionality actually works the way that it is intended. The goal, remember, is to allow someone to understand how it would feel to interact with the system. 
 
 Note: This is a little bit tricky. PLEASE ask your TA about how much functionality is appropriate. We are not interested, for example, in having you build a whole back-end system w/ SQL Server (use a flat file); however, it should not be completely mocked up.
 
