FIX: index.md crossed out P1, A2 that are handed in

--- a/a2.md
+++ b/a2.md
@@ -16,7 +16,7 @@ For each of the following three design problems, identify one method from each o
 * How should we design technology so that airplane mechanics can get a remote consult (e.g. from an expert)?
 * How can we design technology to provide ambient awareness of in-home energy usage?
 
-Your report should be roughly 3-4 pages long. Make sure to use headers to delineate the different sections of the report.
+Your report should be roughly 3-4 physical pages long. Make sure to use headers to delineate the different sections of the report.
 
 This report is to be single-spaced, double-sided. Use 12-pt Times font with 1" margin on all sides.
 
