FIX: P1 page length

--- a/p1.md
+++ b/p1.md
@@ -15,7 +15,7 @@ Since this is a class project, you need not to necessarily interview as many use
 ## Deliverable
 * Turn in a written summary document in your portoflio binder (along with the appropriate grading sheet on top). This should be a single spaced, double sided, 12 pt Times Roman document with 1" margins. Sections should be clearly labeled for each activity in this project component. This should be handed in at the **beginning of the class** on the day it is due. **As with assignments, you have a 10 minute window from the start of class -- handing it in after this 10 minute window will result in a grade of 0.**
 * Provide the following: (a) a succinct description of your project idea, how you expect your system to be used, by whom, and the context under which you expect it to be used; (b) provide a list of stakeholders, and describe them as they relate to the design of the system; (c) discuss the user research methods you used, provide justification for them, and provide a summary of your findings from each of these methods, and (d) provide 6-8 task descriptions of how you expect the system to be used.
-* As a rough guideline, this assignment should result in a 6-8 page document. The maximum is 10 pages.
+* As a rough guideline, this assignment should result in a 6-8 physical page document. The maximum is 10 pages.
 * You should also provide an appendix of any materials used in your user research to serve as **proof that you conducted the research methods**. Note that these do not count against your page count, and do not need to be formatted nicely. Examples could include (but are not limited to): photos of you and your interviewee, interview questions, raw notes from observations, photos from ethnography, survey questions, etc.
 
 ## Grading Sheet
