FIX: P2 page length

--- a/p2.md
+++ b/p2.md
@@ -22,7 +22,7 @@ Time permitting, I will make time available for you to do this session during tu
 * Provide **polished versions** of the three sketches that you selected as having the most potential. Provide a **paragraph describing the idea, then provide another paragraph justification** as to why this sketch is appropriate given user needs, constraints, and/or the design requirements you specified in P1. Each of these sketches should comprise one page.
 * Provide a **polished storyboard** for at least one of these designs (and task scenario). The storyboard should illustrate a usage scenario, and depict how the interface functions in the context of that scenario. You want to provide some detail here. You should aim to have between 6 to 12 slates (no more than 24).
 * Post your **video prototype** on Slack along with your team member's names (aim for 2-3 minutes).
-* As a general guideline, you should expect to have roughly 20 pages of content (no more than 30) -- most of this is templates from the task-centered walkthrough.
+* As a general guideline, you should expect to have roughly 20 physical pages of content (no more than 30) -- most of this is templates from the task-centered walkthrough.
 * You should **provide evidence of your brainstorming session** as an appendix (e.g. a photo of the assorted sketches, or the raw sketches themselves). Note that the appendix does not count toward your page count.
 
 ## Grading Sheet
