FIX: P3 page clarity

--- a/p3.md
+++ b/p3.md
@@ -20,8 +20,8 @@ Note: This is a little bit tricky. PLEASE ask your TA about how much functionali
 * There are two deliverables: an in-tutorial demo to your TA, and a written component.
 * The in-tutorial demo will be scheduled by your TA. You will have 10 minutes to say what your project is (briefly), and to demo the core tasks of your system (consider using your storyboards and tasks from P2 as a guide). You will then need to respond to 5 minutes of questions.
 * On the due date for this project component, you will hand in your portfolio binder in lecture with a written report about your prototype and the results of your heuristic analysis. This written report should address:
-    * In about two pages, how the prototype was built, and the major components of the system. In another 4-6 pages, illustrate the interface components by using the tasks you designed in P1 as your guide. You should include small screenshots of the interface where appropriate. Where there is variance from these tasks, point them out, and justify the design changes.
-    * The results of your heuristic analysis should be written in 3-4 pages (maximum 6 pages). Identify a small set of major problems that must be fixed, and summarize these. Then, describe the issues that were identified, along with which heuristics were violated, and finally, how you would address them in another iteration. You can sort these in terms of severity, in terms of functional/conceptual area (i.e. in a way that makes sense with respect to your system), or in terms of each heuristic. Justify your choice for presentation, and make it clear that sort is being done in the written presentation. You may not have enough space for everything: this is fine, put the remainder in an appendix.
+    * In about two physical pages, how the prototype was built, and the major components of the system. In another 4-6 physical pages, illustrate the interface components by using the tasks you designed in P1 as your guide. You should include small screenshots of the interface where appropriate. Where there is variance from these tasks, point them out, and justify the design changes.
+    * The results of your heuristic analysis should be written in 3-4 physical pages (maximum 6 pages). Identify a small set of major problems that must be fixed, and summarize these. Then, describe the issues that were identified, along with which heuristics were violated, and finally, how you would address them in another iteration. You can sort these in terms of severity, in terms of functional/conceptual area (i.e. in a way that makes sense with respect to your system), or in terms of each heuristic. Justify your choice for presentation, and make it clear that sort is being done in the written presentation. You may not have enough space for everything: this is fine, put the remainder in an appendix.
 * Include as an appendix the raw notes from your heuristic evaluation -- in particular, the notes from your individual heuristic evaluations.
 
 ## Grading Sheet
