FIX: P4 page clarity

--- a/p4.md
+++ b/p4.md
@@ -26,7 +26,7 @@ Word provides several paragraph styles that will help with the professional look
 
 ## Deliverable
 * **Final in-tutorial presentation (or showcase presentation).** This is a 10 minute presentation where you are to construct a powerpoint slide deck. Make sure that you use the pictures and images/scans of your sketches/ideas liberally. Do not go over time. At 11 minutes, your TA will abruptly end your presentation. You will also answer questions from your TA and labmates for 5 minutes. Note: this is expected to a PowerPoint presentation.
-* **Final report.** This document should essentially be a summary of the major components from the previous steps of your project, but the point is to present it professionally and succinctly. You will be given eight pages to compile this report. You have a limit of 12 pages.
+* **Final report.** This document should essentially be a summary of the major components from the previous steps of your project, but the point is to present it professionally and succinctly. You will be given four physical pages to compile this report. You have a limit of 6 physical pages.
 
 ## Grading Sheet
 * Ensure that your grading sheet is placed in front of the section of this component.
