FIX: p2.md tcsd walkthrough template

--- a/p2.md
+++ b/p2.md
@@ -14,7 +14,7 @@ Time permitting, I will make time available for you to do this session during tu
 * **Select and polish ideas**. From your affinity diagramming session, select the three most promising ideas, and re-sketch the idea on a sheet of paper neatly. Add annotations and/or provide descriptions where appropriate.
 * **Refine ideas and create storyboard.** Select one of the three promising ideas, and construct a storyboard that illustrates its context of use (in relation to a task), how it would be used. This should depict some of the interface, and how a user would interact with it.
 * **Video prototype**. Based on the storyboard, construct a video prototype (no more than 2-3 minutes) that illustrates how your system would be used. Be sure to illustrate at least one complete task scenario.
-* **Task-centered system walkthrough.** Based on [the template](files/481-tcsd-walkthrough-template.docx), and the tasks you identified from P1, conduct a task-centered system walkthrough. If you decide now that some of these tasks need to be revised based on your research, then do so.
+* **Task-centered system walkthrough.** Based on [the template](http://hcitang.org/uploads/Teaching/481-tcsd-walkthrough-template.docx), and the tasks you identified from P1, conduct a task-centered system walkthrough. If you decide now that some of these tasks need to be revised based on your research, then do so.
 
 ## Deliverable
 * Turn in a written document in your portfolio binder.
