--- a/p2.md
+++ b/p2.md
@@ -13,7 +13,7 @@ Time permitting, I will make time available for you to do this session during tu
 * **Affinity diagramming session**. This can be part of your brainstorming session, or a different one altogether. As a group, go through each of the sketches one by one, discussing the main idea of the sketch. Construct an affinity diagram with these sketches, or with ideas extracted from the sketches. At the end of this, you will have several different groups (say 3-5 groups). Discuss each of these groups in relation to the design requirements you identified in P1, their weaknesses, strengths, feasibility and originality.
 * **Select and polish ideas**. From your affinity diagramming session, select the three most promising ideas, and re-sketch the idea on a sheet of paper neatly. Add annotations and/or provide descriptions where appropriate.
 * **Refine ideas and create storyboard.** Select one of the three promising ideas, and construct a storyboard that illustrates its context of use (in relation to a task), how it would be used. This should depict some of the interface, and how a user would interact with it.
-* **Video prototype**. Based on the storyboard, construct a video prototype (no more than 2-3 minutes) that illustrates how your system would be used. Be sure to illustrate at least one complete task scenario.
+* **Video prototype**. Based on the storyboard, construct a video prototype (no more than 2-3 minutes) that illustrates how your system would be used. Be sure to illustrate at least one complete task scenario. _This should be uploaded to the #general channel on slack._
 * **Task-centered system walkthrough.** Based on [the template](http://hcitang.org/uploads/Teaching/481-tcsd-walkthrough-template.docx), and the tasks you identified from P1, conduct a task-centered system walkthrough. If you decide now that some of these tasks need to be revised based on your research, then do so.
 
 ## Deliverable
@@ -21,7 +21,7 @@ Time permitting, I will make time available for you to do this session during tu
 * Provide a **summary** of the brainstorming process and affinity diagramming process, articulating: (a) the range of ideas that were explored, (b) what major conceptual groupings you came up with in your affinity diagramming process (likely 3-5). Describe these conceptual groupings, and how they relate to the design requirements you specified in P1 and what you learned from your user research: are users likely to find these ideas palatable?
 * Provide **polished versions** of the three sketches that you selected as having the most potential. Provide a **paragraph describing the idea, then provide another paragraph justification** as to why this sketch is appropriate given user needs, constraints, and/or the design requirements you specified in P1. Each of these sketches should comprise one page.
 * Provide a **polished storyboard** for at least one of these designs (and task scenario). The storyboard should illustrate a usage scenario, and depict how the interface functions in the context of that scenario. You want to provide some detail here. You should aim to have between 6 to 12 slates (no more than 24).
-* Post your **video prototype** on Slack along with your team member's names (aim for 2-3 minutes).
+* Post your **video prototype** on Slack along with your team member's names (aim for 2-3 minutes) to the #general channel.
 * As a general guideline, you should expect to have roughly 20 physical pages of content (no more than 30) -- most of this is templates from the task-centered walkthrough.
 * You should **provide evidence of your brainstorming session** as an appendix (e.g. a photo of the assorted sketches, or the raw sketches themselves). Note that the appendix does not count toward your page count.
 
