FIX: p2.md Clarity in instructions to relate it to P1

--- a/p2.md
+++ b/p2.md
@@ -12,9 +12,9 @@ Time permitting, I will make time available for you to do this session during tu
 
 * **Affinity diagramming session**. This can be part of your brainstorming session, or a different one altogether. As a group, go through each of the sketches one by one, discussing the main idea of the sketch. Construct an affinity diagram with these sketches, or with ideas extracted from the sketches. At the end of this, you will have several different groups (say 3-5 groups). Discuss each of these groups in relation to the design requirements you identified in P1, their weaknesses, strengths, feasibility and originality.
 * **Select and polish ideas**. From your affinity diagramming session, select the three most promising ideas, and re-sketch the idea on a sheet of paper neatly. Add annotations and/or provide descriptions where appropriate.
-* **Refine ideas and create storyboard.** Select one of the three promising ideas, and construct a storyboard that illustrates its context of use (in relation to a task), how it would be used. This should depict some of the interface, and how a user would interact with it.
-* **Video prototype**. Based on the storyboard, construct a video prototype (no more than 2-3 minutes) that illustrates how your system would be used. Be sure to illustrate at least one complete task scenario. _This should be uploaded to the #general channel on slack._
-* **Task-centered system walkthrough.** Based on [the template](http://hcitang.org/uploads/Teaching/481-tcsd-walkthrough-template.docx), and the tasks you identified from P1, conduct a task-centered system walkthrough. If you decide now that some of these tasks need to be revised based on your research, then do so.
+* **Refine ideas and create storyboard.** •	. Select one of the three promising ideas, and construct a storyboard that illustrates its context of use (in relation to a task), how it would be used. This should depict some of the interface, and how a user would interact with it to perform the tasks you identified in P1.
+* **Video prototype**. Based on the storyboard, construct a video prototype (no more than 2-3 minutes) that illustrates how your system would be used. Be sure to illustrate at least one complete task scenario. _This should be uploaded to the #general channel on slack._
+* **Task-centered system walkthrough.** Based on [the template](http://hcitang.org/uploads/Teaching/481-tcsd-walkthrough-template.docx), and the tasks you identified from P1, conduct a task-centered system walkthrough based on your storyboard and video prototype. If you decide now that some of these tasks need to be revised based on your research, then do so.
 
 ## Deliverable
 * Turn in a written document in your portfolio binder.
